# ChangeLog for xfce-base/xfdesktop
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.108 2007/07/01 09:23:33 welp Exp $

  01 Jul 2007; Peter Weller <welp@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
  Clean up old dbus deps wrt bug 183696

  07 Jun 2007; Samuli Suominen <drac@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  Stable on arm.

  01 Jun 2007; Brent Baude <ranger@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  Marking xfdesktop-4.4.1-r1 ppc64 stable for bug #178510

  27 May 2007; Joshua Kinard <kumba@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  Stable on mips.

  24 May 2007; Lars Weiler <pylon@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  Stable on ppc; bug #178510.

  21 May 2007; Jeroen Roovers <jer@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  Stable for HPPA (bug #178510).

  19 May 2007; Peter Weller <welp@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  Stable on amd64 wrt bug 178510

  18 May 2007; Raúl Porcel <armin76@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
  alpha/ia64/x86 stable wrt #178510

  15 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  xfdesktop-4.4.1-r1.ebuild:
  Stable on sparc wrt #178510

  29 Apr 2007; Samuli Suominen <drac@gentoo.org> -xfdesktop-4.4.1.ebuild,
  xfdesktop-4.4.1-r1.ebuild:
  Add missing LINGUAS to ebuild and remove old version.

*xfdesktop-4.4.1-r1 (26 Apr 2007)

  26 Apr 2007; Samuli Suominen <drac@gentoo.org>
  +files/xfdesktop-4.4.1-translation.patch, +xfdesktop-4.4.1-r1.ebuild:
  Fix .it translation which causes parser to fail, and xfdesktop segfault. Bug
  174799.

*xfdesktop-4.4.1 (11 Apr 2007)

  11 Apr 2007; Joshua Nichols <nichoj@gentoo.org> +xfdesktop-4.4.1.ebuild:
  Version bump for 4.4.1.

*xfdesktop-4.5_pre20070325-r1 (26 Mar 2007)

  26 Mar 2007; Samuli Suominen <drac@gentoo.org>
  +xfdesktop-4.5_pre20070325-r1.ebuild:
  Pass --disable-menu-editor to configure options because it's not yet
  supported by new menu system.
