@@ -1,6 +1,9 @@
 # ChangeLog for xfce-base/xfdesktop
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.108 2007/07/01 09:23:33 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfdesktop/ChangeLog,v 1.109 2007/07/01 09:56:15 drac Exp $
+
+  01 Jul 2007; Samuli Suominen <drac@gentoo.org> xfdesktop-4.4.1-r1.ebuild:
+  Clean up old dbus deps wrt bug 183696
 
   01 Jul 2007; Peter Weller <welp@gentoo.org> xfdesktop-4.4.0-r3.ebuild:
   Clean up old dbus deps wrt bug 183696
